Changer lien image dans HTML

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- ---------------------Styles---------------------- -->
 
     <!-- va chercher le fichier .CSS -->
-    <link rel="stylesheet" href="/Projet/Site-Darts-bootstrap/ressources/CSS/Style.css">
+    <link rel="stylesheet" href="ressources/CSS/Style.css">
 
 
 </Head>
@@ -62,7 +62,7 @@
             <div class="container">
 
                 <!-- Ajoute un logo -->
-                <img src="/Projet/Site-Darts-bootstrap/ressources/images/logo.jpg" width="30" height="30"
+                <img src="ressources/images/logo.jpg" width="30" height="30"
                     class="d-inline-block align-right" alt="logo" loading="lazy">
 
                 <!-- Ajoute le nom après le logo -->
@@ -180,7 +180,7 @@
                 <!-- Element ROW Image-->
                 <div class="col-md-7">
                     <!-- image du produit -->
-                    <img src="../Site-Darts-bootstrap/ressources/images/Flechettes.jpg" alt="tea" class="produits-img">
+                    <img src="..ressources/images/Flechettes.jpg" alt="tea" class="produits-img">
                 </div>
                 <!-- Fin ROW Image -->
 
@@ -308,7 +308,7 @@
                 <!-- Thé 1 -->
                 <div class="col-md-4">
                     <div class="famille-details">
-                        <img src="/Projet/Site-Darts-bootstrap/ressources/images/jeux Flechettes.jpg">
+                        <img src="ressources/images/jeux Flechettes.jpg">
                         <h4>Jeux de fléchettes</h4>
                         <p>Tous les jeux de fléchettes :
                             Fléchettes pointes acier pour cibles traditionnelles en sisal
@@ -322,7 +322,7 @@
                 <!-- Thé 2 -->
                 <div class="col-md-4">
                     <div class="famille-details">
-                        <img src="/Projet/Site-Darts-bootstrap/ressources/images/Accessoires.jpg">
+                        <img src="ressources/images/Accessoires.jpg">
                         <h4>Accessoires</h4>
                         <p>-Le fût est le cœur de la fléchette. Son matériau, son poids et ses dimensions influent
                             grandement sur la capacité du joueur à répéter ses trajectoires.<br>
@@ -337,7 +337,7 @@
                 <!-- Thé 3 -->
                 <div class="col-md-4">
                     <div class="famille-details">
-                        <img src="/Projet/Site-Darts-bootstrap/ressources/images/Cible.jpg">
+                        <img src="ressources/images/Cible.jpg">
                         <h4>Cibles</h4>
                         <p>Cible électronique ou traditionnelle :
                             Deux types de jeu de fléchettes existent : le jeu sur cible électronique avec fléchettes à
