Réparation lien html

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <!-- Element ROW Image-->
                 <div class="col-md-7">
                     <!-- image du produit -->
-                    <img src="..ressources/images/Flechettes.jpg" alt="tea" class="produits-img">
+                    <img src="ressources/images/Flechettes.jpg" alt="tea" class="produits-img">
                 </div>
                 <!-- Fin ROW Image -->
 
