--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
                         <div class="col-md-12">
                             <h2>Conctatez-nous</h2>
                             <p> Pour toutes vos questions concernant le service client, comptabilité ou SAV,
-                                contacter-nous. </p>
+                                contactez-nous. </p>
                         </div>
 
                     </div>
