--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             <div class="container">
 
                 <!-- Ajoute un logo -->
-                <img src="ressources/images/logo.jpg" width="30" height="30"
-                    class="d-inline-block align-right" alt="logo" loading="lazy">
+                <img src="ressources/images/logo.jpg" width="30" height="30" class="d-inline-block align-right"
+                    alt="logo" loading="lazy">
 
                 <!-- Ajoute le nom après le logo -->
                 <a class="navbar-brand" href="lien du site">Darts site</a>
@@ -154,7 +154,7 @@
         <!-- ---------------------End Class container1------------------------>
 
     </header>
-  
+
 
 
 
@@ -305,49 +305,77 @@
             <div class="row">
 
 
-                <!-- Thé 1 -->
+                <!-- 1 -->
                 <div class="col-md-4">
-                    <div class="famille-details">
-                        <img src="ressources/images/jeux Flechettes.jpg">
-                        <h4>Jeux de fléchettes</h4>
-                        <p>Tous les jeux de fléchettes :
-                            Fléchettes pointes acier pour cibles traditionnelles en sisal
-                            Fléchettes pointes nylon pour cible électronique
-                            Nombreuses pièces détachées pour personnaliser vos darts et les adapter à votre lancer.).
-                        </p>
-                    </div>
-                </div>
-                <!-- End Thé 1 -->
 
-                <!-- Thé 2 -->
+                    <div class="famille-details">
+
+                        <div class="cadre">
+                            <img src="ressources/images/jeux Flechettes.jpg">
+                        </div>
+                        <div>
+                            <h4>Jeux de fléchettes</h4>
+                            <p>Tous les jeux de fléchettes :
+                                Fléchettes pointes acier pour cibles traditionnelles en sisal
+                                Fléchettes pointes nylon pour cible électronique
+                                Nombreuses pièces détachées pour personnaliser vos darts et les adapter à votre
+                                lancer.).
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+                <!-- End 1 -->
+
+                <!-- 2 -->
                 <div class="col-md-4">
+
                     <div class="famille-details">
-                        <img src="ressources/images/Accessoires.jpg">
-                        <h4>Accessoires</h4>
-                        <p>-Le fût est le cœur de la fléchette. Son matériau, son poids et ses dimensions influent
-                            grandement sur la capacité du joueur à répéter ses trajectoires.<br>
-                            -La tige, également appelée shaft est lecentre de gravité de la fléchette.<br>
-                            -L'ailette, pour stabiliser les volées.
-                        </p>
+
+                        <div class="cadre">
+                            <img src="ressources/images/Accessoires.jpg">
+                        </div>
+
+                        <div>
+                            <h4>Accessoires</h4>
+                            <p>-Le fût est le cœur de la fléchette. Son matériau, son poids et ses dimensions influent
+                                grandement sur la capacité du joueur à répéter ses trajectoires.<br>
+                                -La tige, également appelée shaft est lecentre de gravité de la fléchette.<br>
+                                -L'ailette, pour stabiliser les volées.
+                            </p>
+                        </div>
+
                     </div>
+
                 </div>
-                <!-- End Thé 2 -->
+                <!-- End 2 -->
 
 
-                <!-- Thé 3 -->
+                <!-- 3 -->
                 <div class="col-md-4">
+
                     <div class="famille-details">
-                        <img src="ressources/images/Cible.jpg">
-                        <h4>Cibles</h4>
-                        <p>Cible électronique ou traditionnelle :
-                            Deux types de jeu de fléchettes existent : le jeu sur cible électronique avec fléchettes à
-                            pointe plastique, ou le jeu sur cible traditionnelle avec des fléchettes à pointes acier.
-                            Avant de choisir votre matériel, il vous faudra en premier lieu définir sur quel type de
-                            cible vous désirez jouer.
-                        </p>
+
+                        <div class="cadre">
+                            <img src="ressources/images/Cible.jpg">
+
+                        </div>
+
+                        <div>
+                            <h4>Cibles</h4>
+                            <p>Cible électronique ou traditionnelle :
+                                Deux types de jeu de fléchettes existent : le jeu sur cible électronique avec fléchettes
+                                à
+                                pointe plastique, ou le jeu sur cible traditionnelle avec des fléchettes à pointes
+                                acier.
+                                Avant de choisir votre matériel, il vous faudra en premier lieu définir sur quel type de
+                                cible vous désirez jouer.
+                            </p>
+                        </div>
                     </div>
+
                 </div>
-                <!-- End Thé 3 -->
+                <!-- End 3 -->
 
             </div>
             <!--End ROW "Corps"--->
@@ -379,11 +407,15 @@
 
             <div class="row">
                 <div class="col-md-4">
+
+
                     <div class="galerie-img" style="background-image:url(ressources/images/galerie/photo1.jpg)">
                         <div class="galerie-title">
                             <h4>Jeux de flechettes</h4>
                         </div>
                     </div>
+
+
                 </div>
 
                 <div class="col-md-8">
@@ -430,7 +462,7 @@
 
 
     </section>
-  
+
 
     <!--______________________________________________________Section client_________________________________________________-->
     <section class="clients">
@@ -609,7 +641,7 @@
         </div>
 
     </section>
- 
+
 
     <!--______________________________________________________Section CONTACT_________________________________________________-->
     <section>
