--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <Head>
 
-    <Title>Mon Blog</Title>
+    <Title>Datrs</Title>
     <!-- Pour reconnaissance accent avec <> explorer -->
-    <meta charset=UTF-8">
+    <meta charset="UTF-8">
 
     <!-- permet d adpater le site internet à la taille des différents écrans avec width=device-width-->
     <!-- et initial-scale=1 permet de mettre à l'echelle 1 -->
